# object-detection-feature-matching

./: CMakeLists.txt  LICENSE  README.md
data/004_sugar_box/labels/: 4_0001_000121-box.txt  4_0001_000956-box.txt  4_0014_001409-box.txt  4_0025_000065-box.txt  4_0049_000003-box.txt  4_0049_000815-box.txt  4_0054_000215-box.txt  4_0058_000001-box.txt  4_0058_001715-box.txt  4_0077_000659-box.txt
data/006_mustard_bottle/labels/: 6_0001_000952-box.txt  6_0008_001625-box.txt  6_0008_002747-box.txt  6_0026_000077-box.txt  6_0030_000130-box.txt  6_0030_001027-box.txt  6_0046_000002-box.txt  6_0069_000681-box.txt  6_0087_000029-box.txt
data/035_power_drill/labels/: 35_0010_000001-box.txt  35_0010_000491-box.txt  35_0010_000868-box.txt  35_0010_001462-box.txt  (+6 more)
include/Evaluator/: evaluator_NihalSuri.h
include/FeatureDetectorMatcher/: featureDetection_MaxPries.h  featureMatching_MaxPries.cpp
include/FeatureMatcher/: featureMatching_MaxPries.h
include/ObjectDetector/: ObjectDetector_BjornMagnus.h  featureDetection_MaxPries.h  objectDetectorAll_MaxPries.h
include/Utils/: OutputProcessing_BjornMagnus.h  inputProcessing_MaxPries.h  outputProcessing_NihalSuri.h
src/: main.cpp
src/Evaluator/: evaluator_NihalSuri.cpp
src/FeatureDetectorMatcher/: featureDetection_MaxPries.cpp
src/FeatureMatcher/: featureMatching_MaxPries.cpp
src/ObjectDetector/: ObjectDetector_BjornMagnus.cpp  featureDetection_MaxPries.cpp  objectDetectorAll_MaxPries.cpp
src/Utils/: OutputProcessing_BjornMagnus.cpp  inputProcessing_MaxPries.cpp  outputProcessing_NihalSuri.cpp
